--- a/index.html
+++ b/index.html
@@ -4,14 +4,50 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Sokid</title>
 </head>
 <body>
+  <button>Ping</button>
   <script>
-    const Sock = new WebSocket('ws://localhost:8080')
-    Sock.onopen = () => {
-      console.log('Hands got shook')
+    function connect({
+      uri,
+      reconnectInterval, 
+    } = {
+      // default configuration
+      uri: 'ws://localhost:8080',
+      reconnectInterval: 10,
+    }) {
+      function makePayload(length) {
+        let keys = {}
+        for (let i = 65; i <= 90; ++i) {
+          keys[String.fromCharCode(i)] = i
+        }
+        return keys
+      }
+      
+      const Sokk = new WebSocket(uri)
+      
+      Sokk.onopen = () => {
+        console.log('Hands got shook')
+        Sokk.send(JSON.stringify(makePayload()).repeat(1))}
+      Sokk.onmessage = msg => {
+        console.log('Received: ' + msg.data)
+      }
+      Sokk.onclose = x => {
+        console.log('Socket is closing')
+        console.log('Trying to reconnect')
+        connect({uri})
+      }
+
+      return Sokk
     }
+
+    const Sokk = connect()
+
+    document.getElementsByTagName('button')[0]
+      .addEventListener('click', () => {
+        Sokk.send('Ping')
+      })
   </script>
 </body>
 </html>
